force-app/main/default/objects/Creative_Request__c/Creative_Request__c.object-meta.xml
<CustomObject>
    <label>Creative Request</label>
    <nameField>
        <label>Creative Request  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Creative Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>