force-app/main/default/objects/Creative_Request__c/fields/Additional_Logo__c.field-meta.xml
<CustomField>
    <fullName>Additional_Logo__c</fullName>
    <label>Additional Logo</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>