force-app/main/default/objects/Creative_Request__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alliance Orthopedics</fullName>
            </value>
            <value>
                <fullName>Alliance Performance</fullName>
            </value>
            <value>
                <fullName>Alliance Health Systems</fullName>
            </value>
            <value>
                <fullName>Alliance University</fullName>
            </value>
            <value>
                <fullName>TeamMD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>