force-app/main/default/objects/Creative_Request__c/fields/Dimension_Format__c.field-meta.xml
<CustomField>
    <fullName>Dimension_Format__c</fullName>
    <label>Dimension/Format</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>