force-app/main/default/objects/Creative_Request__c/fields/Direction_of_Artwork__c.field-meta.xml
<CustomField>
    <fullName>Direction_of_Artwork__c</fullName>
    <inlineHelpText>Ex: Colors, Visuals, Objectives</inlineHelpText>
    <label>Direction of Artwork</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>