force-app/main/default/objects/Creative_Request__c/fields/Publishing_Platform__c.field-meta.xml
<CustomField>
    <fullName>Publishing_Platform__c</fullName>
    <inlineHelpText>Ex: Instagram, Internal Newsletter, Constant Contact, Print, etc.</inlineHelpText>
    <label>Publishing Platform</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>