force-app/main/default/objects/Creative_Request__c/fields/Text_displayed_on_Artwork__c.field-meta.xml
<CustomField>
    <fullName>Text_displayed_on_Artwork__c</fullName>
    <label>Text displayed on Artwork</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>