force-app/main/default/objects/Creative_Request__c/fields/Title_on_Artwork__c.field-meta.xml
<CustomField>
    <fullName>Title_on_Artwork__c</fullName>
    <label>Title on Artwork</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>