force-app/main/default/objects/Creative_Request__c/fields/Type_of_Request__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Request__c</fullName>
    <label>Type of Request</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Social Media Graphics</fullName>
            </value>
            <value>
                <fullName>Billboard</fullName>
            </value>
            <value>
                <fullName>Business Cards</fullName>
            </value>
            <value>
                <fullName>Brochure</fullName>
            </value>
            <value>
                <fullName>Postcard</fullName>
            </value>
            <value>
                <fullName>Poster</fullName>
            </value>
            <value>
                <fullName>Flyer</fullName>
            </value>
            <value>
                <fullName>Convention Needs</fullName>
            </value>
            <value>
                <fullName>Invitation</fullName>
            </value>
            <value>
                <fullName>TV Screens</fullName>
            </value>
            <value>
                <fullName>One-Sheet</fullName>
            </value>
            <value>
                <fullName>PowerPoint Presentation</fullName>
            </value>
            <value>
                <fullName>Custom Landing Page</fullName>
            </value>
            <value>
                <fullName>Event Needs (Ex: The Future of PT Event, Train Like a Pro)</fullName>
            </value>
            <value>
                <fullName>Newsletter / Email Blast</fullName>
            </value>
            <value>
                <fullName>Digital Ads</fullName>
            </value>
            <value>
                <fullName>Print Ads</fullName>
            </value>
            <value>
                <fullName>Press Release</fullName>
            </value>
            <value>
                <fullName>Outdoor Signage (Banner, Flags, etc.)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>