force-app/main/default/objects/Creative_Request__c/fields/Who_Approved_it__c.field-meta.xml
<CustomField>
    <fullName>Who_Approved_it__c</fullName>
    <label>Who Approved it?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>