force-app/main/default/objects/Creative_Request__c/listViews/Creative_Request_Creative_Request.listView-meta.xml
<ListView>
    <fullName>Creative_Request_Creative_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>Creative Request</label>
    <queue>Creative_Request</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>